# sleeperbot

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  lambda_function.py  pyproject.toml
dynasty/: cli.py
sleeperbot/: __init__.py  cli.py  config.py  league.py  manager.py  models.py  utils.py
sleeperbot/clients/: fantasy_calc.py  ktc.py  session.py  sleeper.py
