[tool.poetry]
name = "sleeperbot"
version = "0.1.0"
description = "A feeble attempt at automating management for a Sleeper dynasty football league."
authors = ["Matt Kracht <mwkracht@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
click = "^8.1.3"

[tool.poetry.scripts]
sleeperbot_cli = 'sleeperbot.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
