[tool.poetry]
name = "sleeperbot"
version = "0.1.0"
description = "A feeble attempt at automating management for a Sleeper dynasty football league."
authors = ["Matt Kracht <mwkracht@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
redis = "^5.0.1"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
click = "^8.1.3"
ipython = "^8.16.1"

[tool.poetry.scripts]
sleeperbot = 'sleeperbot.cli:main'
manager = 'sleeperbot.manager:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100
force_grid_wrap = 2

[tool.black]
line-length = 120
target-verion = ['py311']
preview = true

[tool.ruff]
select = [
    "F",
    "W",
    "UP",
    "C4"
]
ignore = []

fixable = ["ALL"]
unfixable = []

line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # unused-import
]
